--- a/APP/templates/APP/index.html
+++ b/APP/templates/APP/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial</title>
-    {% load bootstrap4 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript jquery='full' %}
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-4">Bem-vindo ao Meu Projeto Bonito!</h1>
-        <p class="lead">Este é um exemplo de projeto Django com Bootstrap.</p>
+        <h1 class="mt-4">Bem-vindo ao Meu Projeto!</h1>
+        <p class="lead">Este é um projeto Django.</p>
     </div>
 </body>
 </html>
